--- a/Telegram.Bot.Examples.WebHook/appsettings.json
+++ b/Telegram.Bot.Examples.WebHook/appsettings.json
@@ -7,7 +7,7 @@
   },
   "BotConfiguration": {
     "BotToken": "5988028648:AAHM7w2ltaTS_Zb_17qs4hst9_UAg98jYbI",
-    "HostAddress": "https://bc7b-178-131-130-131.ngrok-free.app",
+    "HostAddress": "https://halood.life",
     "Route": "/bot",
     "SecretToken": "1qaz@WSX"
   }
