--- a/Telegram.Bot.Examples.WebHook/appsettings.Development.json
+++ b/Telegram.Bot.Examples.WebHook/appsettings.Development.json
@@ -8,8 +8,8 @@
     }
   },
   "BotConfiguration": {
-    "BotToken": "5988028648:AAHM7w2ltaTS_Zb_17qs4hst9_UAg98jYbI",
-    "HostAddress": "https://e76c-178-131-130-131.ngrok-free.app",
+    "BotToken": "6320679099:AAEgr4GUBmB527LxGGEHGGDWR3_TSAFGDRE",
+    "HostAddress": "https://1101-178-131-131-70.ngrok-free.app",
     "Route": "/bot",
     "SecretToken": "1qaz@WSX"
   }
