--- a/Telegram.Bot.Examples.WebHook/appsettings.Development.json
+++ b/Telegram.Bot.Examples.WebHook/appsettings.Development.json
@@ -7,9 +7,12 @@
       "Microsoft": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.,7505;Database=Halood;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "BotConfiguration": {
     "BotToken": "6320679099:AAEgr4GUBmB527LxGGEHGGDWR3_TSAFGDRE",
-    "HostAddress": "https://1101-178-131-131-70.ngrok-free.app",
+    "HostAddress": "https://3e2b-178-131-163-111.ngrok-free.app",
     "Route": "/bot",
     "SecretToken": "1qaz@WSX"
   }
