--- a/Telegram.Bot.Examples.WebHook/appsettings.Development.json
+++ b/Telegram.Bot.Examples.WebHook/appsettings.Development.json
@@ -12,7 +12,7 @@
   },
   "BotConfiguration": {
     "BotToken": "6320679099:AAEgr4GUBmB527LxGGEHGGDWR3_TSAFGDRE",
-    "HostAddress": "https://3e2b-178-131-163-111.ngrok-free.app",
+    "HostAddress": "https://718c-178-131-187-175.ngrok-free.app",
     "Route": "/bot",
     "SecretToken": "1qaz@WSX"
   }
