feat: added db settings for production

--- a/Telegram.Bot.Examples.WebHook/appsettings.json
+++ b/Telegram.Bot.Examples.WebHook/appsettings.json
@@ -5,6 +5,9 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\MSSQLSERVER2019;Database=haloodli_tracker;User Id=haloodli_admin;Password=k(kD7}iOwW_i0)0i;Integrated Security=False;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "BotConfiguration": {
     "BotToken": "5988028648:AAHM7w2ltaTS_Zb_17qs4hst9_UAg98jYbI",
     "HostAddress": "https://halood.life",
