fix: refactored code

--- a/Telegram.Bot.Examples.WebHook/Telegram.Bot.Examples.WebHook.csproj
+++ b/Telegram.Bot.Examples.WebHook/Telegram.Bot.Examples.WebHook.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Halood.Repository\Halood.Repository.csproj" />
+    <ProjectReference Include="..\Halood.Service\Halood.Service.csproj" />
   </ItemGroup>
 
   <ItemGroup>
