--- a/Halood.Common/Halood.Common.csproj
+++ b/Halood.Common/Halood.Common.csproj
@@ -7,13 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\Base\" />
-    <Folder Include="Interfaces\UserSatisfaction\" />
-    <Folder Include="Interfaces\User\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Telegram.Bot" Version="19.0.0" />
+    <ProjectReference Include="..\Halood.Domain\Halood.Domain.csproj" />
   </ItemGroup>
 
 </Project>
