feat: added emotions

--- a/Telegram.Bot.Examples.WebHook/appsettings.Development.json
+++ b/Telegram.Bot.Examples.WebHook/appsettings.Development.json
@@ -12,7 +12,7 @@
   },
   "BotConfiguration": {
     "BotToken": "6320679099:AAEgr4GUBmB527LxGGEHGGDWR3_TSAFGDRE",
-    "HostAddress": "https://eb7f-178-131-161-107.ngrok-free.app",
+    "HostAddress": "https://4f70-178-131-162-69.ngrok-free.app",
     "Route": "/bot",
     "SecretToken": "1qaz@WSX"
   }
