--- a/Halood.Service/Halood.Service.csproj
+++ b/Halood.Service/Halood.Service.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="PDFsharp" Version="6.1.0" />
+    <PackageReference Include="PDFsharp-MigraDoc" Version="6.1.0" />
     <PackageReference Include="Telegram.Bot" Version="19.0.0" />
   </ItemGroup>
 
