--- a/Telegram.Bot.Examples.WebHook/appsettings.Development.json
+++ b/Telegram.Bot.Examples.WebHook/appsettings.Development.json
@@ -12,7 +12,7 @@
   },
   "BotConfiguration": {
     "BotToken": "6320679099:AAEgr4GUBmB527LxGGEHGGDWR3_TSAFGDRE",
-    "HostAddress": "https://f373-178-131-162-14.ngrok-free.app",
+    "HostAddress": "https://a9fd-178-131-163-194.ngrok-free.app",
     "Route": "/bot",
     "SecretToken": "1qaz@WSX"
   }
