--- a/Halood.Service/Halood.Service.csproj
+++ b/Halood.Service/Halood.Service.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="PDFsharp" Version="6.1.0" />
     <PackageReference Include="PDFsharp-MigraDoc" Version="6.1.0" />
+    <PackageReference Include="PersianDateTime.Core" Version="2.0.5" />
     <PackageReference Include="Telegram.Bot" Version="19.0.0" />
   </ItemGroup>
 
