--- a/Telegram.Bot.Examples.WebHook/Telegram.Bot.Examples.WebHook.csproj
+++ b/Telegram.Bot.Examples.WebHook/Telegram.Bot.Examples.WebHook.csproj
@@ -17,7 +17,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Jobs\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -27,6 +26,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Files\Sahel.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Files\tux.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
