fix: modified AddCommand to remove the command firstly

--- a/Telegram.Bot.Examples.WebHook/appsettings.Development.json
+++ b/Telegram.Bot.Examples.WebHook/appsettings.Development.json
@@ -12,7 +12,7 @@
   },
   "BotConfiguration": {
     "BotToken": "6320679099:AAEgr4GUBmB527LxGGEHGGDWR3_TSAFGDRE",
-    "HostAddress": "https://29ea-178-131-145-25.ngrok-free.app",
+    "HostAddress": "https://d912-178-131-144-129.ngrok-free.app",
     "Route": "/bot",
     "SecretToken": "1qaz@WSX"
   }
