fix: added route attribute to avoid text checking

--- a/Telegram.Bot.Examples.WebHook/appsettings.Development.json
+++ b/Telegram.Bot.Examples.WebHook/appsettings.Development.json
@@ -12,7 +12,7 @@
   },
   "BotConfiguration": {
     "BotToken": "6320679099:AAEgr4GUBmB527LxGGEHGGDWR3_TSAFGDRE",
-    "HostAddress": "https://7971-178-131-146-12.ngrok-free.app",
+    "HostAddress": "https://3b82-93-119-209-15.ngrok-free.app",
     "Route": "/bot",
     "SecretToken": "1qaz@WSX"
   }
