--- a/Telegram.Bot.Examples.WebHook/appsettings.Development.json
+++ b/Telegram.Bot.Examples.WebHook/appsettings.Development.json
@@ -12,7 +12,7 @@
   },
   "BotConfiguration": {
     "BotToken": "6320679099:AAEgr4GUBmB527LxGGEHGGDWR3_TSAFGDRE",
-    "HostAddress": "https://3b82-93-119-209-15.ngrok-free.app",
+    "HostAddress": "https://da67-178-131-137-211.ngrok-free.app",
     "Route": "/bot",
     "SecretToken": "1qaz@WSX"
   }
