--- a/Telegram.Bot.Examples.WebHook/appsettings.Development.json
+++ b/Telegram.Bot.Examples.WebHook/appsettings.Development.json
@@ -8,11 +8,11 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.,7505;Database=Halood;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.,7505;Database=Halood;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "BotConfiguration": {
     "BotToken": "6320679099:AAEgr4GUBmB527LxGGEHGGDWR3_TSAFGDRE",
-    "HostAddress": "https://e10e-188-213-195-34.ngrok-free.app",
+    "HostAddress": "https://b001-188-213-193-183.ngrok-free.app",
     "Route": "/bot",
     "SecretToken": "1qaz@WSX"
   }
