fix: changed stimulsoft dlls to copy always

--- a/Telegram.Bot.Examples.WebHook/Telegram.Bot.Examples.WebHook.csproj
+++ b/Telegram.Bot.Examples.WebHook/Telegram.Bot.Examples.WebHook.csproj
@@ -58,6 +58,72 @@
     <None Update="Files\stimulsoft.reports.web.netcore.2023.1.1.nupkg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Files\stimulsoft_dlls\Microsoft.CodeAnalysis.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Newtonsoft.Json.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\SixLabors.Fonts.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\SixLabors.ImageSharp.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\SixLabors.ImageSharp.Drawing.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Stimulsoft.Base.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Stimulsoft.Blockly.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Stimulsoft.Data.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Stimulsoft.Drawing.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Stimulsoft.Map.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Stimulsoft.MathFX.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Stimulsoft.Report.Check.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Stimulsoft.Report.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Stimulsoft.Report.Helper.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Stimulsoft.Report.Mvc.NetCore.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Stimulsoft.Report.Web.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Stimulsoft.Report.WebDesign.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Stimulsoft.Svg.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Stimulsoft.System.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\Stimulsoft.System.Web.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\System.CodeDom.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\stimulsoft_dlls\System.Drawing.Common.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Files\tux.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
