--- a/Telegram.Bot.Examples.WebHook/appsettings.Development.json
+++ b/Telegram.Bot.Examples.WebHook/appsettings.Development.json
@@ -12,7 +12,7 @@
   },
   "BotConfiguration": {
     "BotToken": "6320679099:AAEgr4GUBmB527LxGGEHGGDWR3_TSAFGDRE",
-    "HostAddress": "https://9134-93-117-181-34.ngrok-free.app",
+    "HostAddress": "https://3a41-93-117-180-48.ngrok-free.app",
     "Route": "/bot",
     "SecretToken": "1qaz@WSX"
   }
