--- a/Telegram.Bot.Examples.WebHook/appsettings.Development.json
+++ b/Telegram.Bot.Examples.WebHook/appsettings.Development.json
@@ -12,7 +12,7 @@
   },
   "BotConfiguration": {
     "BotToken": "6320679099:AAEgr4GUBmB527LxGGEHGGDWR3_TSAFGDRE",
-    "HostAddress": "https://7577-178-131-179-201.ngrok-free.app",
+    "HostAddress": "https://1abd-178-131-176-135.ngrok-free.app",
     "Route": "/bot",
     "SecretToken": "1qaz@WSX"
   }
