fix: added happiness to copy always

--- a/Telegram.Bot.Examples.WebHook/Telegram.Bot.Examples.WebHook.csproj
+++ b/Telegram.Bot.Examples.WebHook/Telegram.Bot.Examples.WebHook.csproj
@@ -88,6 +88,9 @@
     <None Update="Files\grief_color.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Files\happiness.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Files\interest_color.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
