--- a/Telegram.Bot.Examples.WebHook/appsettings.Development.json
+++ b/Telegram.Bot.Examples.WebHook/appsettings.Development.json
@@ -12,7 +12,7 @@
   },
   "BotConfiguration": {
     "BotToken": "6320679099:AAEgr4GUBmB527LxGGEHGGDWR3_TSAFGDRE",
-    "HostAddress": "https://1abd-178-131-176-135.ngrok-free.app",
+    "HostAddress": "https://8e20-178-131-27-206.ngrok-free.app",
     "Route": "/bot",
     "SecretToken": "1qaz@WSX"
   }
