feat: added FAQ

--- a/Telegram.Bot.Examples.WebHook/appsettings.Development.json
+++ b/Telegram.Bot.Examples.WebHook/appsettings.Development.json
@@ -12,7 +12,7 @@
   },
   "BotConfiguration": {
     "BotToken": "6320679099:AAEgr4GUBmB527LxGGEHGGDWR3_TSAFGDRE",
-    "HostAddress": "https://3ea0-178-131-26-202.ngrok-free.app",
+    "HostAddress": "https://4cb1-178-131-26-202.ngrok-free.app",
     "Route": "/bot",
     "SecretToken": "1qaz@WSX"
   }
